Fix FF layout bug

--- a/_assets/css/layout/_article.scss
+++ b/_assets/css/layout/_article.scss
@@ -89,8 +89,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    flex: 1 1 0% ;
-    flex-basis: 0%;
+    // flex: 1 1 0%;
+    // flex-basis: 0%;
     height: 100vh;
 
     .l-Site--home &,
@@ -154,7 +154,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    flex-basis: auto;
+    // flex-basis: auto;
     min-height: 100vh;
   }
 }
